global.css bg content

--- a/sites/all/themes/JBW/css/global.css
+++ b/sites/all/themes/JBW/css/global.css
@@ -44,6 +44,7 @@
     top: 12px;
     z-index: 10;
 }
+
 /*input text field*/
 #search-block-form .form-text{
     width: 138px;
@@ -51,7 +52,7 @@
     border: none;
     background: url(../images/header/searchbox.png) no-repeat bottom;
     text-indent: 5px;
-    font-size: 12px;
+    font-size: 10px;
 }
 
 /*input button(submits)*/
@@ -73,10 +74,12 @@
 #pattern img{
     float: right;
     /*padding-top: 5px;*/
-    position: relative;
+    position: absolute;
+    top: 5px;
+    right: 0;
     z-index: 1;
     /*margin-right: 10px;*/
-    margin-top: 5px;
+    /*margin-top: 5px;*/
 }
 
 /*site slogan*/
@@ -100,7 +103,7 @@
     padding-right: 30px;
     /*position: absolute; */
     position: relative;
-    top: 118px;
+    top: 5px;
     background: url(../images/header/menu_bg.png) no-repeat center 0;
 }
 
@@ -115,6 +118,10 @@
     height: 32px;
 }
 
+.block-nice-menus{
+    width: 800px;
+}
+
 ul.nice-menu,
 ul.nice-menu ul{
     margin: 0;
@@ -126,19 +133,53 @@ ul.nice-menu li{
     float: left;
     list-style: none;
     position: relative;
-    /*background-color: inherit;*/
-	background-color: white;
+    background-color: inherit;/*white*/
     border: none;
 }
+
 ul.nice-menu li a{
     display: block;
-    height: 21px;
+    /*height: 21px;*/
+    margin: 3px 10px;
     /*padding-left: 10px;
     padding-right: 10px;*/
-    padding: 5px 10px;
+    /*margin: 5px 10px;*/
     text-decoration: none;
     text-align: center;
     color: black;
+}
+
+ul.nice-menu ul li{
+    background-color: white;/*white*/
+    /*height: 21px;*/
+    /*padding: 5px 10px;*/
+}
+
+ul.nice-menu ul a{
+    display: block;
+    height: auto;
+    /*height: 21px;*/
+    /*margin: 5px 10px;*/
+    text-decoration: none;
+    text-align: center;
+    color: black;
+}
+
+ul.nice-menu ul li:hover{
+    background-color: gray;
+}
+ul.nice-menu ul a:hover{
+    text-decoration:underline;
+}
+
+/*Share component*/
+#block-sharethis-sharethis-block{
+    display: block;
+    width: 110px;
+    position: relative;
+    top: -25px;
+    float: right;
+    z-index: 20;
 }
 
 /*Slider zone*/
@@ -149,36 +190,137 @@ ul.nice-menu li a{
     padding-right: 30px;
     /*position: absolute;  */
     position: relative;
-    top: 165px;
+    top: 15px;
     background: url(../images/slider/slider_bg.png) no-repeat center 0;
 }
 
 #zone-header{
     width: 960px;
-    height: 32px;
+    height: 262px;
 }
 
 #region-header{
     margin: 0;
     width: 960px;
-    height: 32px;
+    height: 262px;
+}
+
+/* image slider*/
+.slider-left-part{
+    float: left;
+}
+
+.views-field-field-slider-image{
+    float: right;
+    margin: 10px 5px 5px 5px;
+}
+
+/*text slider*/
+.views-field-body  .field-content p{
+    /*display: block;*/
+    width: 296px;
+    height: 210px;
+    position: absolute;
+    text-align: center;
+    font-size: 14px;
+    margin: 15px 3px 15px 15px; 
+    /*z-index: 10;*/
+}
+/*title slider*/
+.views-field-title{
+    display: none;
 }
 
 /*section-content*/
 #zone-content-wrapper{
-    
+    margin: 0;
+    width: 960px;
+    padding-left: 30px;
+    padding-right: 30px;
+    position: relative;  
+    top: 10px;
 }
 
 #zone-content{
-    
+    width: 960px;
 }
 
 #region-content{
-    
+    width: 565px;
 }
 
 #region-sidebar{
+    margin: 0;
+    float: right;
+    width: 370px;
+    /*height: 310px;*/
+    position: relative;
+    /*background: url(../images/content/region-sidebar.png) no-repeat 0 0;*/
+}
+
+.fest_row_homepage{
+    margin: 0;
+    float: left;
+    width: 550px;
+    /*height: 310px;*/
+    position: relative;
+    background: url(../images/content/region-content.png) no-repeat 0 0;
+    margin-top: 20px;
+}
+
+.festival-left-part{
+    float: left;
+    width: 155px;
+    height: 265px;
+}
+
+.views-field-field-festival-image{
+    float: right;
+    margin-top: 10px;
+    margin-right: 5px;
+    /*margin: 10px 5px 5px 5px;*/
+}
+
+.views-field-field-festival-image img{
+    z-index: 10;
+}
+
+.views-field-field-description{
+    /*float: left;*/
+    width: 155px;
+    height: 265px;
+    position: absolute;
+    text-align: center;
+    font-size: 14px;
+    margin-left: 15px;
+    margin-top: 10px;
+}
+/*share in content*/
+.views-field-sharethis{
     
+    float: right;
+    position: relative;
+    right: 0;
+    z-index: 20;
+}
+
+/*sidebar*/
+.overview .block{
+    width: 370px;
+    margin-bottom: 5px;
+    background: url(../images/content/region-sidebar.png) no-repeat 0 0;
+}
+
+.festival-color1 .views-field-field-description{
+    background-color: greenyellow;
+}
+
+.festival-color2 .views-field-field-description{
+    background-color: orange;
+}
+
+.festival-color3 .views-field-field-description{
+    background-color: purple;
 }
 
 /*section-footer*/
@@ -189,7 +331,7 @@ ul.nice-menu li a{
     padding-right: 30px;
     position: relative;  
    /* top: 1780px;*/
-    top: 341px;
+    top: 458px;
     background: url(../images/footer/footer_bg.png) no-repeat center 0;
 }
 
@@ -207,79 +349,9 @@ ul.nice-menu li a{
     float: left;
     margin: 10px 10px;
 }
-/*
-body {
-	background-color: pink;
-}
-*/
-#section-content{
-            margin-top: 700px;
-}
-.festival_homepage_social .social_icon{
-	width: 100px;
-}
 
-.region-sidebar .block {
-	margin-top: 20px;
-	background-color: white;
-}
-/*
-.slider-left-part {
-	background-color: red;
-	float: left;
-	width: 190px;
-	height: 200px;
-}*/
-
-.block-slider {
-  /*  width: 960px;
-    height: 262px;
-    padding-left: 30px;
-    padding-right: 30px;
-    position: absolute;  
-    top: 165px;
-    background: url(../images/slider/slider_bg.png) no-repeat center 0;*/
-	/*background-color: white;
-	padding: 10px;*/
-}
-
-.views-field-field-slider-image {
-	float: right;
-}
-
-/*something like that I don't remember*/
-
-.social_block .social_icon {
-	display: inline;
-}
-
-.festival-color1 .festival-left-part {
-	background-color: green;
-}
-
-.festival-color2 .festival-left-part {
-	background-color: orange;
-}
-
-.festival-color3 .festival-left-part {
-	background-color: red;
-}
-
-.festival-left-part {
-	float: left;
-	width: 150px;
-	height: 300px;
-}
-
-.fest_row_homepage {
-	background-color: white;
-	margin-bottom: 20px;
-	width: 550px;
-	padding: 10px;
-}
-
-#scrollbarY { width: 470px; margin: 20px 0 10px;}
-#scrollbarY .viewport { width: 450px; height: 300px; overflow: hidden; position: relative; background-color: blue;}
+#scrollbarY { width: 390px; margin: 20px 0 10px;}
+#scrollbarY .viewport { width: 370px; height: 1200px; overflow: hidden; position: relative;}
 #scrollbarY .overview { list-style: none; position: absolute; left: 0; top: 0; padding: 0; margin: 0; }
 #scrollbarY .scrollbar{ background: transparent url(images/bg-scrollbar-track-y.png) no-repeat 0 0; position: relative; background-position: 0 0; float: right; width: 15px; }
 #scrollbarY .track { background: transparent url(images/bg-scrollbar-trackend-y.png) no-repeat 0 100%; height: 100%; width:13px; position: relative; padding: 0 1px; }
