--- a/sites/all/themes/JBW/css/global.css
+++ b/sites/all/themes/JBW/css/global.css
@@ -38,11 +38,16 @@
 /*Search block*/
 #block-search-form{
     margin: 0;
+    width: 150px;
+    height: 13px;
     float: right;
     position: absolute;
-    right: 15px;
+    right: 55px; /*15*/
     top: 12px;
     z-index: 10;
+}
+#search-block-form input{
+    margin: 0;
 }
 
 /*input text field*/
@@ -59,8 +64,8 @@
 #search-block-form .form-submit{
     background: url(../images/header/searchbutton.png) no-repeat 0 0;
     overflow: hidden;
-    width: 17px;
-    height: 16px;
+    width: 12px;
+    height: 13px;
     cursor: pointer;
     position: relative;
     float: right;
@@ -68,6 +73,10 @@
     padding: 0;
     top: 5px;
     border-radius: 0;
+}
+
+.form-item-search-block-form{
+    margin: 0;
 }
 
 /*pattern in the right corner*/
@@ -329,9 +338,10 @@ ul.nice-menu ul a:hover{
     height: 42px;
     padding-left: 30px;
     padding-right: 30px;
-    position: relative;  
-   /* top: 1780px;*/
-    top: 458px;
+    position: absolute;  
+    top: 1807px;
+    /*top: 1780px;*/
+    /*top: 458px;*/
     background: url(../images/footer/footer_bg.png) no-repeat center 0;
 }
 
