--- a/sites/all/themes/JBW/css/sidebar.css
+++ b/sites/all/themes/JBW/css/sidebar.css
@@ -7,8 +7,8 @@
 
 .overview .block{
     width: 377px;
-    margin-top: 10px;
-    /*margin-bottom: 5px;*/
+    /*margin-top: 10px;*/
+    margin-bottom: 10px;
     background: url(../images/content/region-sidebar.png) no-repeat 0 0;
 }
 
