--- a/sites/all/themes/JBW/css/slider.css
+++ b/sites/all/themes/JBW/css/slider.css
@@ -45,16 +45,20 @@
 }
 
 /*text slider*/
-.slider-left-part .views-field-body p{
+.slider-left-part .views-field-body{/*p*/
     text-align: left;
     width: 296px;
-    height: 230px;
+    height: 210px;
     position: absolute;
-    /*padding: 15px 3px 15px 15px; */
     margin: 15px 3px 15px 15px;
     padding: 10px;
     z-index: 10;
 }
+
+
+/*.slider-left-part .views-field-body p{
+    margin-bottom: 0;
+}*/
 
 
 /*------------------изначально накатал---------------*/
