--- a/sites/all/themes/JBW/css/content.css
+++ b/sites/all/themes/JBW/css/content.css
@@ -17,7 +17,8 @@
     width: 550px;
     height: 310px;
     position: relative;
-    background: url(../images/content/region-content.png) no-repeat 0 0;
+   /* background: url(../images/content/region-content.png) no-repeat 0 0;*/
+   background: white;
     margin-bottom: 10px;
 }
 
@@ -48,7 +49,7 @@
 }
 
 /*text slider*/
-.page-home .festival-left-part  p{
+.page-home .festival-left-part{/*p*/
     text-align: left;
     width: 140px;
     height: 245px;
@@ -56,7 +57,8 @@
     /*padding: 15px 3px 15px 15px; */
     /*margin: 15px 3px 15px 15px;*/
     
-    margin: 10px 30px 15px 15px; 
+    font-size: 10px;
+    margin: 10px 0 30px 15px; 
     padding: 10px;
     z-index: 10;
 }
