--- a/sites/all/themes/JBW/css/global.css
+++ b/sites/all/themes/JBW/css/global.css
@@ -26,7 +26,7 @@ body{
     padding-right: 30px;
     /*position: absolute;*/
     position: relative;
-    background: url(../images/header/header.png) no-repeat center 0;  
+    /*background: url(../images/header/header.png) no-repeat center 0; */
 }
 
 #zone-branding{
@@ -38,6 +38,7 @@ body{
     margin: 0;
     width: 960px;
     height: 113px;
+    background: white;
 }
 
 .branding-data{
@@ -78,7 +79,7 @@ body{
     /*position: absolute; */
     position: relative;
     top: 5px;
-    background: url(../images/header/menu_bg.png) no-repeat center 0;
+    /*background: url(../images/header/menu_bg.png) no-repeat center 0;*/
 }
 
 #zone-menu{
@@ -90,6 +91,7 @@ body{
     margin: 0;
     width: 960px;
     height: 32px;
+    background: white;
 }
 
 /*Share component*/
@@ -151,7 +153,7 @@ body{
     /*top: 1780px;*/
     top: 1807px;
     /*top: 458px;*/
-    background: url(../images/footer/footer_bg.png) no-repeat center 0;
+   /* background: url(../images/footer/footer_bg.png) no-repeat center 0;*/
 }
 
 #zone-footer{
@@ -163,6 +165,7 @@ body{
     margin: 0;
     width: 960px;
     height: 42px;
+    background: white;
 }
 
 #block-system-powered-by{
