--- a/sites/all/themes/JBW/css/global.css
+++ b/sites/all/themes/JBW/css/global.css
@@ -1,21 +1,120 @@
 /* This file will hold styles for the mobile version of your website (mobile first). */
 /* This also can include ANY global CSS that applies site-wide. Unless overwritten by a more specific style rule, CSS declarations in global.css will apply site-wide. */
-body{
-    /* background: url(../images/bg_2k.jpg) no-repeat;*/
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section { 
+    display: block;
 }
+
+@media screen and (min-width: 1280px) and (max-width: 2560px) and (device-aspect-ratio: 16/10){
+        body{
+            background-attachment: fixed;
+            background-clip: border-box;
+            background-color: transparent;
+            background-image: url(../images/bg/bg_1280px.jpg);
+            background-origin: padding-box;
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+}
+
+@media screen and (min-width: 1280px) and (max-width: 2560px) and (device-aspect-ratio: 16/9){
+        body{
+            background-attachment: fixed;
+            background-clip: border-box;
+            background-color: transparent;
+            background-image: url(../images/bg/bg_1280px.jpg);
+            background-origin: padding-box;
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            
+          /*  background: url(../images/bg/bg_1280px.jpg) no-repeat;
+            background-size: 100%;
+            -moz-background-size: 100%; /* Firefox 3.6+ */
+           /* -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+            /*-o-background-size: 100%; /* Opera 9.6+ */
+        }
+}
+
+@media screen and (min-width: 1280px) and (max-width: 2560px) and (device-aspect-ratio: 8/5){
+        body{            
+            background-attachment: fixed;
+            background-clip: border-box;
+            background-color: transparent;
+            background-image: url(../images/bg/bg_1280px.jpg);
+            background-origin: padding-box;
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+}
+
+@media screen and (min-width: 1280px) and (max-width: 2560px) and (device-aspect-ratio: 5/4){
+        body{
+            background-attachment: fixed;
+            background-clip: border-box;
+            background-color: transparent;
+            background-image: url(../images/bg/bg_1280px.jpg);
+            background-origin: padding-box;
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+}
+
+@media screen and (min-width: 1280px) and (max-width: 2560px) and (device-aspect-ratio: 5/3){
+        body{
+            background-attachment: fixed;
+            background-clip: border-box;
+            background-color: transparent;
+            background-image: url(../images/bg/bg_1280px.jpg);
+            background-origin: padding-box;
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+}
+
+@media screen and (min-width: 1280px) and (max-width: 2560px) and (device-aspect-ratio: 4/3){
+        body{
+            background-attachment: fixed;
+            background-clip: border-box;
+            background-color: transparent;
+            background-image: url(../images/bg/bg_1280px.jpg);
+            background-origin: padding-box;
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+}
+
+
+/*body{
+     background: url(../images/bg_2560px.jpg) no-repeat;
+}*/
 
 #page{
     margin: 0 auto;
     padding: 0;
     width: 1020px;
-    height: 1820px;
-    background: url(../images/bg.png) no-repeat;
+    /*height: 1820px;*/
+    /*background: url(../images/bg.png) no-repeat;*/
     /*position: relative;*/
 }
 
 /*header*/
 #section-header{
-    width: 1020px;
+    /*width: 1020px;*/
     height: 430px;
 }
 
@@ -139,8 +238,9 @@ body{
 /*section footer*/
 #section-footer{
     /*top: 30px;*/
-    width: 1020px;
-    height: 42px; 
+    /*width: 1020px;
+    height: 42px; */
+    clear: both;
 }
 
 #zone-footer-wrapper{
