--- a/sites/all/themes/JBW/css/sidebar.css
+++ b/sites/all/themes/JBW/css/sidebar.css
@@ -1,12 +1,13 @@
 #region-sidebar{
     margin: 0;
     padding: 0;
-    width: 380px;
+    /*width: 380px;*/
+    width: 395px;
     margin-left: 15px;
 }
 
 #scrollbarY  section{ /*.overview .block*/
-    width: 377px;
+    /*width: 370px;*/
     /*margin-top: 10px;*/
     position: relative;
     /*background: url(../images/content/region-sidebar.png) no-repeat 0 0;*/
@@ -15,7 +16,7 @@
 }
 
 #scrollbarY  iframe{
-     width: 377px;
+     width: 370px;
     /*margin-top: 10px;*/
     position: relative;
     background: white; /*#FFFFFF*/
@@ -28,11 +29,11 @@
 }
 
 
-#scrollbarY { width: 390px;/* margin: 20px 0 10px;*/}
+#scrollbarY { width: 395px;/* margin: 20px 0 10px;*/}
 #scrollbarY .viewport { width: 380px; /*min-*/height: 120px; overflow: hidden; position: relative;}
 #scrollbarY .overview { list-style: none; position: absolute; left: 0; top: 0; padding: 0; margin: 0; }
 #scrollbarY .scrollbar{ background: transparent url(sb/bg-scrollbar-track-y.png) no-repeat 0 0; position: relative; background-position: 0 0; float: right; width: 15px; }
 #scrollbarY .track { background: transparent url(sb/bg-scrollbar-trackend-y.png) no-repeat 0 100%; height: 100%; width:13px; position: relative; padding: 0 1px; }
-#scrollbarY .thumb { background: transparent url(sb/bg-scrollbar-thumb-y.png) no-repeat 50% 100%; height: 20px; width: 25px; cursor: pointer; overflow: hidden; position: absolute; top: 0; left: -5px; }
+#scrollbarY .thumb { background: transparent url(sb/bg-scrollbar-thumb-y.png) no-repeat 50% 100%; height: 20px; width: 25px; cursor: pointer; overflow: hidden; position: absolute; top: 0; left: -7px;}
 #scrollbarY .thumb .end { background: transparent url(sb/bg-scrollbar-thumb-y.png) no-repeat 50% 0; overflow: hidden; height: 5px; width: 25px; }
 #scrollbarY .disable { display: none; }
